# advent-of-code

./: .gitignore  Cargo.toml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day21.rs  domain.rs  main.rs  solution.rs  solution18.json  template.rs  utils.rs
src/database/: mod.rs
src/day01/: mod.rs  solution.json
src/day02/: mod.rs  solution.json
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs  solution.json
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs  solution.json
src/day11/: mod.rs
src/day12/: solution.json
src/day13/: mod.rs  solution.json
src/day14/: mod.rs  solution.json
src/day15/: mod.rs  solution.json
src/day16/: mod.rs
src/day17/: mod.rs  solution.json
src/day18/: mod.rs  snailfish.rs
src/day20/: mod.rs
src/day21/: mod.rs
src/day22/: mod.rs
src/day23/: amphipod.rs  location.rs  mod.rs  solution.json
src/day24/: instruction.rs  mod.rs
src/day25/: mod.rs  solution.json
src/day26/: solution.json
src/domain/: cube.rs  grid.rs  line.rs  mod.rs  order.rs  position.rs
src/migrations/: V1__initial.sql
src/utils/: mod.rs  solution.rs  string.rs
src/year2015/: mod.rs
src/year2015/day01/: mod.rs  solution.json
src/year2015/day02/: mod.rs  solution.json
src/year2015/day03/: mod.rs  solution.json
src/year2015/day04/: mod.rs
src/year2015/day05/: mod.rs  solution.json
src/year2015/day06/: mod.rs  (+1 more)
src/year2021/: mod.rs
src/year2022/: mod.rs
(+78 files in other folders)
