[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vectrix = "0.1.3"
itertools = "0.9.0"
argh = "0.1.7"
paris = { version = "1.5", features = ["macros"] }
chrono = "0.4.19"
