[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vectrix = "0.3.0"
itertools = "0.10.5"
argh = "0.1.7"
paris = { version = "1.5", features = ["macros"] }
chrono = "0.4.19"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.87"
strum = "0.24.1"
strum_macros = "0.24.3"
fancy-regex = "0.10.0"
anyhow = "1.0.66"
rusqlite = { version = "0.28.0", features = ["chrono"] }
scan_fmt = "0.2.6"
indicatif = "0.17.2"
